# services/server/blueprint/login_blueprint.py
@@ -5,7 +5,7 @@ from controller.login_api_handler import LoginApiHandler as login_api_handler
 SWAGGER_URL = '/api/docs'  # URL for exposing Swagger UI (without trailing '/')
 API_URL = 'http://patienttracker.swagger.io/v1/swagger.json'  # Our API url (can of course be a local resource)
 
-login_api = Blueprint('login_api', __name__, url_prefix='/api/login' )
+login_api = Blueprint('login_api', __name__, url_prefix='/api/user/login' )
 
 @login_api.route("/")
 def hello():
@@ -16,7 +16,7 @@ def fetch():
     try:
         all_cats = login_api_handler.fetch()
     except Exception as e:
-        return handle_error(e, f"Error[{type(e)}]{str(e)}", "api/login/fetch")
+        return handle_error(e, f"Error[{type(e)}]{str(e)}", "api/user/login/fetch")
     return jsonify(all_cats), 200
 
 @login_api.route('/add', methods=['POST'])
@@ -24,7 +24,7 @@ def add():
     try:
         ret_val = login_api_handler.add()
     except Exception as e:
-        return handle_error(e, f"Error[{type(e)}]{str(e)}", "api/login/add")
+        return handle_error(e, f"Error[{type(e)}]{str(e)}", "api/user/login/add")
     return jsonify(ret_val), 200
 
 
